tests/snapshots/lexer_snapshots__lexer_all@tokens-9.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/09_extensions.of
---
Ok(
    [
        Token {
            token_type: Import,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: From,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "of:core",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Struct,
            position: 40,
            line: 3,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Vehicle",
            ),
            position: 48,
            line: 3,
            column: 15,
        },
        Token {
            token_type: LeftBrace,
            position: 50,
            line: 3,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "speed",
            ),
            position: 58,
            line: 4,
            column: 8,
        },
        Token {
            token_type: Colon,
            position: 59,
            line: 4,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 63,
            line: 4,
            column: 13,
        },
        Token {
            token_type: Comma,
            position: 64,
            line: 4,
            column: 14,
        },
        Token {
            token_type: RightBrace,
            position: 66,
            line: 5,
            column: 2,
        },
        Token {
            token_type: Extend,
            position: 74,
            line: 7,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Vehicle",
            ),
            position: 82,
            line: 7,
            column: 15,
        },
        Token {
            token_type: LeftBrace,
            position: 84,
            line: 7,
            column: 17,
        },
        Token {
            token_type: Function,
            position: 95,
            line: 8,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "is_fast",
            ),
            position: 103,
            line: 8,
            column: 19,
        },
        Token {
            token_type: LeftParen,
            position: 104,
            line: 8,
            column: 20,
        },
        Token {
            token_type: SelfRef,
            position: 108,
            line: 8,
            column: 24,
        },
        Token {
            token_type: RightParen,
            position: 109,
            line: 8,
            column: 25,
        },
        Token {
            token_type: Colon,
            position: 110,
            line: 8,
            column: 26,
        },
        Token {
            token_type: Identifier(
                "bool",
            ),
            position: 115,
            line: 8,
            column: 31,
        },
        Token {
            token_type: LeftBrace,
            position: 117,
            line: 8,
            column: 33,
        },
        Token {
            token_type: SelfRef,
            position: 126,
            line: 9,
            column: 9,
        },
        Token {
            token_type: Dot,
            position: 127,
            line: 9,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "speed",
            ),
            position: 132,
            line: 9,
            column: 15,
        },
        Token {
            token_type: GT,
            position: 134,
            line: 9,
            column: 17,
        },
        Token {
            token_type: Int(
                "100",
            ),
            position: 138,
            line: 9,
            column: 21,
        },
        Token {
            token_type: RightBrace,
            position: 142,
            line: 10,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 144,
            line: 11,
            column: 2,
        },
        Token {
            token_type: Interface,
            position: 155,
            line: 13,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Movable",
            ),
            position: 163,
            line: 13,
            column: 18,
        },
        Token {
            token_type: LeftBrace,
            position: 165,
            line: 13,
            column: 20,
        },
        Token {
            token_type: Function,
            position: 176,
            line: 14,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "move",
            ),
            position: 181,
            line: 14,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 182,
            line: 14,
            column: 17,
        },
        Token {
            token_type: SelfRef,
            position: 186,
            line: 14,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 187,
            line: 14,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 188,
            line: 14,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 192,
            line: 14,
            column: 27,
        },
        Token {
            token_type: RightBrace,
            position: 194,
            line: 15,
            column: 2,
        },
        Token {
            token_type: Extend,
            position: 202,
            line: 17,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Vehicle",
            ),
            position: 210,
            line: 17,
            column: 15,
        },
        Token {
            token_type: Colon,
            position: 211,
            line: 17,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "Movable",
            ),
            position: 219,
            line: 17,
            column: 24,
        },
        Token {
            token_type: LeftBrace,
            position: 221,
            line: 17,
            column: 26,
        },
        Token {
            token_type: Function,
            position: 232,
            line: 18,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "move",
            ),
            position: 237,
            line: 18,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 238,
            line: 18,
            column: 17,
        },
        Token {
            token_type: SelfRef,
            position: 242,
            line: 18,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 243,
            line: 18,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 244,
            line: 18,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 248,
            line: 18,
            column: 27,
        },
        Token {
            token_type: LeftBrace,
            position: 250,
            line: 18,
            column: 29,
        },
        Token {
            token_type: If,
            position: 257,
            line: 19,
            column: 7,
        },
        Token {
            token_type: LeftParen,
            position: 259,
            line: 19,
            column: 9,
        },
        Token {
            token_type: SelfRef,
            position: 263,
            line: 19,
            column: 13,
        },
        Token {
            token_type: Dot,
            position: 264,
            line: 19,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "is_fast",
            ),
            position: 271,
            line: 19,
            column: 21,
        },
        Token {
            token_type: LeftParen,
            position: 272,
            line: 19,
            column: 22,
        },
        Token {
            token_type: RightParen,
            position: 273,
            line: 19,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 274,
            line: 19,
            column: 24,
        },
        Token {
            token_type: LeftBrace,
            position: 276,
            line: 19,
            column: 26,
        },
        Token {
            token_type: StringLit(
                "The vehicle zooms",
            ),
            position: 302,
            line: 20,
            column: 26,
        },
        Token {
            token_type: RightBrace,
            position: 308,
            line: 21,
            column: 6,
        },
        Token {
            token_type: Else,
            position: 313,
            line: 21,
            column: 11,
        },
        Token {
            token_type: LeftBrace,
            position: 315,
            line: 21,
            column: 13,
        },
        Token {
            token_type: StringLit(
                "The vehicle moves",
            ),
            position: 341,
            line: 22,
            column: 26,
        },
        Token {
            token_type: RightBrace,
            position: 347,
            line: 23,
            column: 6,
        },
        Token {
            token_type: RightBrace,
            position: 351,
            line: 24,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 353,
            line: 25,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 363,
            line: 27,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 368,
            line: 27,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 369,
            line: 27,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 370,
            line: 27,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 371,
            line: 27,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 375,
            line: 27,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 377,
            line: 27,
            column: 23,
        },
        Token {
            token_type: Var,
            position: 383,
            line: 28,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "slow",
            ),
            position: 388,
            line: 28,
            column: 11,
        },
        Token {
            token_type: Eq,
            position: 390,
            line: 28,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "Vehicle",
            ),
            position: 398,
            line: 28,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 400,
            line: 28,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "speed",
            ),
            position: 406,
            line: 28,
            column: 29,
        },
        Token {
            token_type: Colon,
            position: 407,
            line: 28,
            column: 30,
        },
        Token {
            token_type: Int(
                "40",
            ),
            position: 410,
            line: 28,
            column: 33,
        },
        Token {
            token_type: RightBrace,
            position: 412,
            line: 28,
            column: 35,
        },
        Token {
            token_type: Semicolon,
            position: 413,
            line: 28,
            column: 36,
        },
        Token {
            token_type: Var,
            position: 419,
            line: 29,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "fast",
            ),
            position: 424,
            line: 29,
            column: 11,
        },
        Token {
            token_type: Eq,
            position: 426,
            line: 29,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "Vehicle",
            ),
            position: 434,
            line: 29,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 436,
            line: 29,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "speed",
            ),
            position: 442,
            line: 29,
            column: 29,
        },
        Token {
            token_type: Colon,
            position: 443,
            line: 29,
            column: 30,
        },
        Token {
            token_type: Int(
                "220",
            ),
            position: 447,
            line: 29,
            column: 34,
        },
        Token {
            token_type: RightBrace,
            position: 449,
            line: 29,
            column: 36,
        },
        Token {
            token_type: Semicolon,
            position: 450,
            line: 29,
            column: 37,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 458,
            line: 30,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 459,
            line: 30,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "slow",
            ),
            position: 463,
            line: 30,
            column: 13,
        },
        Token {
            token_type: Dot,
            position: 464,
            line: 30,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "move",
            ),
            position: 468,
            line: 30,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 469,
            line: 30,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 470,
            line: 30,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 471,
            line: 30,
            column: 21,
        },
        Token {
            token_type: Semicolon,
            position: 472,
            line: 30,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 480,
            line: 31,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 481,
            line: 31,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "fast",
            ),
            position: 485,
            line: 31,
            column: 13,
        },
        Token {
            token_type: Dot,
            position: 486,
            line: 31,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "move",
            ),
            position: 490,
            line: 31,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 491,
            line: 31,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 492,
            line: 31,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 493,
            line: 31,
            column: 21,
        },
        Token {
            token_type: Semicolon,
            position: 494,
            line: 31,
            column: 22,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 498,
            line: 32,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 500,
            line: 33,
            column: 2,
        },
    ],
)
