tests/snapshots/lexer_snapshots__lexer_all@tokens-97.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/04_structs_interfaces/interface_extends.of
---
Ok(
    [
        Token {
            token_type: Interface,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Named",
            ),
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 24,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Colon,
            position: 25,
            line: 2,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 29,
            line: 2,
            column: 12,
        },
        Token {
            token_type: Comma,
            position: 30,
            line: 2,
            column: 13,
        },
        Token {
            token_type: RightBrace,
            position: 32,
            line: 3,
            column: 2,
        },
        Token {
            token_type: Interface,
            position: 43,
            line: 5,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Printable",
            ),
            position: 53,
            line: 5,
            column: 20,
        },
        Token {
            token_type: Colon,
            position: 54,
            line: 5,
            column: 21,
        },
        Token {
            token_type: Identifier(
                "Named",
            ),
            position: 60,
            line: 5,
            column: 27,
        },
        Token {
            token_type: LeftBrace,
            position: 62,
            line: 5,
            column: 29,
        },
        Token {
            token_type: Function,
            position: 73,
            line: 6,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "to_string",
            ),
            position: 83,
            line: 6,
            column: 21,
        },
        Token {
            token_type: LeftParen,
            position: 84,
            line: 6,
            column: 22,
        },
        Token {
            token_type: SelfRef,
            position: 88,
            line: 6,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 89,
            line: 6,
            column: 27,
        },
        Token {
            token_type: Colon,
            position: 90,
            line: 6,
            column: 28,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 94,
            line: 6,
            column: 32,
        },
        Token {
            token_type: RightBrace,
            position: 96,
            line: 7,
            column: 2,
        },
    ],
)
