tests/snapshots/lexer_snapshots__lexer_all@tokens-98.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/spec/02_variables/var_with_type.of
---
Ok(
    [
        Token {
            token_type: Var,
            position: 3,
            line: 1,
            column: 4,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Colon,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Eq,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: StringLit(
                "John Doe",
            ),
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: Semicolon,
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Var,
            position: 31,
            line: 2,
            column: 4,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 35,
            line: 2,
            column: 8,
        },
        Token {
            token_type: Eq,
            position: 37,
            line: 2,
            column: 10,
        },
        Token {
            token_type: Int(
                "30",
            ),
            position: 40,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Semicolon,
            position: 41,
            line: 2,
            column: 14,
        },
        Token {
            token_type: Var,
            position: 45,
            line: 3,
            column: 4,
        },
        Token {
            token_type: Identifier(
                "price",
            ),
            position: 51,
            line: 3,
            column: 10,
        },
        Token {
            token_type: Colon,
            position: 52,
            line: 3,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "f32",
            ),
            position: 56,
            line: 3,
            column: 15,
        },
        Token {
            token_type: Eq,
            position: 58,
            line: 3,
            column: 17,
        },
        Token {
            token_type: Float(
                "19.99",
            ),
            position: 64,
            line: 3,
            column: 23,
        },
        Token {
            token_type: Semicolon,
            position: 65,
            line: 3,
            column: 24,
        },
    ],
)
